--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
 
 	<header class="app-banner">
-		<div class="container d-flex">
+		<div class="container d-flex flex-wrap">
 			<article class="banner-content">
 				<div class="banner-logo">
 					<img src="/public/image/logo_repsorts.jpg" alt="logo LGN">
@@ -60,11 +60,11 @@
 					Here is a short description of the report
 				</p>
 			</header>
-			<div class="card mb-3">
-				<div class="card-header">
-					<div class="card-title">
+			<article class="card mb-3">
+				<header class="card-header">
+					<h4 class="card-title">
 						Cover
-					</div>
+					</h4>
 					<div class="card-actions">
 						<button class="btn btn-secondary btn-sm">
 							<svg aria-hidden="true" focusable="false" data-prefix="far" data-icon="trash-alt" class="svg-inline--fa fa-trash-alt fa-w-14" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512"><path fill="currentColor" d="M268 416h24a12 12 0 0 0 12-12V188a12 12 0 0 0-12-12h-24a12 12 0 0 0-12 12v216a12 12 0 0 0 12 12zM432 80h-82.41l-34-56.7A48 48 0 0 0 274.41 0H173.59a48 48 0 0 0-41.16 23.3L98.41 80H16A16 16 0 0 0 0 96v16a16 16 0 0 0 16 16h16v336a48 48 0 0 0 48 48h288a48 48 0 0 0 48-48V128h16a16 16 0 0 0 16-16V96a16 16 0 0 0-16-16zM171.84 50.91A6 6 0 0 1 177 48h94a6 6 0 0 1 5.15 2.91L293.61 80H154.39zM368 464H80V128h288zm-212-48h24a12 12 0 0 0 12-12V188a12 12 0 0 0-12-12h-24a12 12 0 0 0-12 12v216a12 12 0 0 0 12 12z"></path></svg>
@@ -73,10 +73,10 @@
 							<svg aria-hidden="true" focusable="false" data-prefix="fas" data-icon="pencil-alt" class="svg-inline--fa fa-pencil-alt fa-w-16" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><path fill="currentColor" d="M497.9 142.1l-46.1 46.1c-4.7 4.7-12.3 4.7-17 0l-111-111c-4.7-4.7-4.7-12.3 0-17l46.1-46.1c18.7-18.7 49.1-18.7 67.9 0l60.1 60.1c18.8 18.7 18.8 49.1 0 67.9zM284.2 99.8L21.6 362.4.4 483.9c-2.9 16.4 11.4 30.6 27.8 27.8l121.5-21.3 262.6-262.6c4.7-4.7 4.7-12.3 0-17l-111-111c-4.8-4.7-12.4-4.7-17.1 0zM124.1 339.9c-5.5-5.5-5.5-14.3 0-19.8l154-154c5.5-5.5 14.3-5.5 19.8 0s5.5 14.3 0 19.8l-154 154c-5.5 5.5-14.3 5.5-19.8 0zM88 424h48v36.3l-64.5 11.3-31.1-31.1L51.7 376H88v48z"></path></svg>
 						</button>
 					</div>
-				</div>
-			</div>
-			<div class="card">
-				<div class="card-header">
+				</header>
+			</article>
+			<article class="card mb-3">
+				<header class="card-header">
 					<div class="card-header-icon">
 						<div class="badge badge-accent mr-2">
 							<svg aria-hidden="true" focusable="false" data-prefix="fab" data-icon="instagram" class="svg-inline--fa fa-instagram fa-w-14" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512"><path fill="currentColor" d="M224.1 141c-63.6 0-114.9 51.3-114.9 114.9s51.3 114.9 114.9 114.9S339 319.5 339 255.9 287.7 141 224.1 141zm0 189.6c-41.1 0-74.7-33.5-74.7-74.7s33.5-74.7 74.7-74.7 74.7 33.5 74.7 74.7-33.6 74.7-74.7 74.7zm146.4-194.3c0 14.9-12 26.8-26.8 26.8-14.9 0-26.8-12-26.8-26.8s12-26.8 26.8-26.8 26.8 12 26.8 26.8zm76.1 27.2c-1.7-35.9-9.9-67.7-36.2-93.9-26.2-26.2-58-34.4-93.9-36.2-37-2.1-147.9-2.1-184.9 0-35.8 1.7-67.6 9.9-93.9 36.1s-34.4 58-36.2 93.9c-2.1 37-2.1 147.9 0 184.9 1.7 35.9 9.9 67.7 36.2 93.9s58 34.4 93.9 36.2c37 2.1 147.9 2.1 184.9 0 35.9-1.7 67.7-9.9 93.9-36.2 26.2-26.2 34.4-58 36.2-93.9 2.1-37 2.1-147.8 0-184.8zM398.8 388c-7.8 19.6-22.9 34.7-42.6 42.6-29.5 11.7-99.5 9-132.1 9s-102.7 2.6-132.1-9c-19.6-7.8-34.7-22.9-42.6-42.6-11.7-29.5-9-99.5-9-132.1s-2.6-102.7 9-132.1c7.8-19.6 22.9-34.7 42.6-42.6 29.5-11.7 99.5-9 132.1-9s102.7-2.6 132.1 9c19.6 7.8 34.7 22.9 42.6 42.6 11.7 29.5 9 99.5 9 132.1s2.7 102.7-9 132.1z"></path></svg>
@@ -91,11 +91,89 @@
 							<svg aria-hidden="true" focusable="false" data-prefix="fas" data-icon="chevron-down" class="svg-inline--fa fa-chevron-down fa-w-14" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512"><path fill="currentColor" d="M207.029 381.476L12.686 187.132c-9.373-9.373-9.373-24.569 0-33.941l22.667-22.667c9.357-9.357 24.522-9.375 33.901-.04L224 284.505l154.745-154.021c9.379-9.335 24.544-9.317 33.901.04l22.667 22.667c9.373 9.373 9.373 24.569 0 33.941L240.971 381.476c-9.373 9.372-24.569 9.372-33.942 0z"></path></svg>
 						</button>
 					</div>
-				</div>
+				</header>
 				<div class="card-body">
-					Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+					<div class="statistics">
+						<div class="row no-gutters">
+							<div class="col-md-4">
+								<section class="indicator comment card">
+									<div class="card-body d-flex flex-column align-items-start">
+										<img src="/public/image/logo_repsorts.jpg" alt="logo LGN">
+										<div class="indicator-name mt-auto">
+											Comment
+										</div>
+										<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+										<button class="btn btn-primary btn-block">True</button>
+									</div>
+								</section>
+							</div>
+							<div class="col-md-8">
+								<div class="basic-indicators">
+									<div class="row">
+										<div class="col-lg-6 mb-4">
+											<div class="indicator card bg-secondary">
+												<div class="card-body">
+													<div class="indicator-name">
+														Title #1
+													</div>
+													<div class="indicator-content">
+														<p class="mb-0 text-center">X X X</p>
+														<p class="mb-0 text-center">Total Followers</p>
+													</div>
+												</div>
+											</div>
+										</div>
+										<div class="col-lg-6 mb-4">
+											<div class="indicator card bg-secondary">
+												<div class="card-body">
+													<div class="indicator-name">
+														Title #2
+													</div>
+													<div class="indicator-content">
+														<p class="mb-0 text-center">X X X</p>
+														<p class="mb-0 text-center">New Followers</p>
+													</div>
+												</div>
+											</div>
+										</div>
+										<div class="col-12 mb-4">
+											<div class="indicator card bg-secondary">
+												<div class="card-body">
+													<div class="indicator-name">
+														Title #1
+													</div>
+													<div class="indicator-content">
+														<p class="mb-0 text-center">X X X</p>
+														<p class="mb-0 text-center">Total Followers</p>
+													</div>
+												</div>
+											</div>
+										</div>
+										<div class="col-12 mb-4">
+											<div class="indicator card bg-secondary">
+												<div class="card-body">
+													<div class="indicator-name">
+														Title #1
+													</div>
+													<div class="indicator-content">
+														<p class="mb-0 text-center">X X X</p>
+														<p class="mb-0 text-center">Total Followers</p>
+													</div>
+												</div>
+											</div>
+										</div>
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
+					<!-- Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. -->
 				</div>
-			</div>
+			</article>
+			<button class="add-new-module btn btn-outline-secondary btn-block">
+				<svg aria-hidden="true" focusable="false" data-prefix="fas" data-icon="plus-circle" class="svg-inline--fa fa-plus-circle fa-w-16" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><path fill="currentColor" d="M256 8C119 8 8 119 8 256s111 248 248 248 248-111 248-248S393 8 256 8zm144 276c0 6.6-5.4 12-12 12h-92v92c0 6.6-5.4 12-12 12h-56c-6.6 0-12-5.4-12-12v-92h-92c-6.6 0-12-5.4-12-12v-56c0-6.6 5.4-12 12-12h92v-92c0-6.6 5.4-12 12-12h56c6.6 0 12 5.4 12 12v92h92c6.6 0 12 5.4 12 12v56z"></path></svg>
+				Add New module
+			</button>
 		</div>
 	</section>
 
